--- a/Paralelismo/makefile
+++ b/Paralelismo/makefile
@@ -1,21 +1,7 @@
-#JFLAGS = -g
-#JC = javac
-#JVM = java 
-#MAIN= Core
-
-#run: $(MAIN).class
-#	$(JVM) $(MAIN)
-
-#$(MAIN):
-#	$(JC) $(JFLAGS) *.java
-
-#borrar:
-#	rm *.class
-
 all:src/Core.class
 
 src/Core.class: src/Core.java
-	javac src/*.java
+	javac -encoding UTF-8 src/*.java
 	
 clean:
 	$(RM) src/*.class Core.jar
